--- a/Publications.html
+++ b/Publications.html
@@ -18,12 +18,13 @@ header-img: "img/Book.jpg"
 
     <h3 class="year-title">Publications — 2025</h3>
 
-    <div class="pub-item">
+    <!-- <div class="pub-item">
       <div class="pub-title">Scene4U: Hierarchical Layered 3D Scene Reconstruction from Single Panoramic Image for Your Immerse Exploration</div>
       <div class="pub-authors">Zilong Huang, Jun He, Junyan Ye, Lihan Jiang, Weijia Li, Yiping Chen*, Ting Han*</div>
       <div class="pub-meta">Proc. IEEE Conf. Comput. Vis. Pattern Recognit. (CVPR), 2025, (CCF-A)</div>
-    </div>
+    </div> -->
 
+      <p>- <strong>Scene4U: Hierarchical Layered 3D Scene Reconstruction from Single Panoramic Image for Your Immerse Exploration</strong>, Zilong Huang, Jun He, Junyan Ye, Lihan Jiang, Weijia Li, Yiping Chen*, Ting Han*, Proc. IEEE Conf. Comput. Vis. Pattern Recognit. (CVPR), 2025, (CCF-A).</p>
       <p>- <strong>Scale Effects in Mangrove Mapping from Ultra-high-resolution Remote Sensing Imagery</strong>, Hanwen Zhang, Shan Wei, Xindan Liang, Yiping Chen, Hongsheng Zhang, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
       <p>- <strong>Image-point Cloud Embedding Network for Simultaneous Image-based Farmland Instance Extraction and Point Cloud-based Semantic Segmentation</strong>, Jinpeng Li, Yuan Li, Shuhang Zhang, Yiping Chen, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
       <p>- <strong>CSFNet: Cross-modal Semantic Focus Network for Sematic Segmentation of Large-Scale Point Clouds</strong>, Yang Luo, Ting Han, Yujun Liu, Jinhe Su, Yiping Chen, Jinyuan Li, Yundong Wu*, Guorong Cai*, IEEE Transactions on Geoscience and Remote Sensing, 2025, (JCR Q1, IF=8.2, CCF-B).</p>
