--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Spatio-Temporal 3D AI Laboratory"
+description: "3D Spatio-Temporal AI Laboratory"
 ---
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
