--- a/Groups.html
+++ b/Groups.html
@@ -142,7 +142,7 @@ div::-webkit-scrollbar-thumb:hover {
 			</div>
 			<div class="member-card">
 				<div class="member-img-wrapper">
-				<a href="https://ting-devin-han.github.io/" class="member-link">
+				<a href="https://ting-devin-han.github.io/Homepage-main/" class="member-link">
 			  <img src="https://github.com/Ting-Devin-Han/Epingpages.github.io/raw/master/images/TingHan.jpg" alt="Ting Han">
 			  <div class="member-badge">3D Point Clouds</div> <!-- 浮层标签 --></div>
 			  <div class="member-name">Ting Han</div>
@@ -157,6 +157,12 @@ div::-webkit-scrollbar-thumb:hover {
 			<div class="member-card">
 				<div class="member-img-wrapper">
 				<img src="{{ site.baseurl }}/img/people/YangLuo.jpg" alt="Yang Luo">
+				<div class="member-badge">3D Point Clouds</div> <!-- 浮层标签 --></div>
+				<div class="member-name">Yang Luo</div>
+			</div>
+			<div class="member-card">
+				<div class="member-img-wrapper">
+				<img src="{{ site.baseurl }}/img/people/WenyuKe.jpg" alt="Wenyu Ke">
 				<div class="member-badge">3D Point Clouds</div> <!-- 浮层标签 --></div>
 				<div class="member-name">Yang Luo</div>
 			</div>
