--- a/Groups.html
+++ b/Groups.html
@@ -164,7 +164,7 @@ div::-webkit-scrollbar-thumb:hover {
 				<div class="member-img-wrapper">
 				<img src="{{ site.baseurl }}/img/people/WenyuKe.jpg" alt="Wenyu Ke">
 				<div class="member-badge">3D Point Clouds</div> <!-- 浮层标签 --></div>
-				<div class="member-name">Yang Luo</div>
+				<div class="member-name">Wenyu Ke</div>
 			</div>
 			</div>
 		  
