--- a/Publications.html
+++ b/Publications.html
@@ -202,6 +202,13 @@ header-img: "img/Book.jpg"
   .zh.post-container p {
     font-size: 14px; /* 你想要的字号，比如14px，可自行调整 */
   }
+  .zh.post-container {
+  max-width: 1200px;   /* 或你想要的宽度，比如1400px */
+  margin: 0 auto;      /* 居中显示 */
+  width: 85%;          /* 让内容几乎占满页面 */
+  padding: 0 20px;     /* 两侧留点内边距，避免贴边 */
+  box-sizing: border-box;
+  }
   </style>
 
 <!-- English Version -->
