--- a/Publications.html
+++ b/Publications.html
@@ -24,11 +24,11 @@ header-img: "img/Book.jpg"
       <div class="pub-meta">Proc. IEEE Conf. Comput. Vis. Pattern Recognit. (CVPR), 2025, (CCF-A)</div>
     </div> -->
 
-    <p>1 - Scene4U: Hierarchical Layered 3D Scene Reconstruction from Single Panoramic Image for Your Immerse Exploration, Zilong Huang, Jun He, Junyan Ye, Lihan Jiang, Weijia Li, <strong>Yiping Chen*</strong>, Ting Han*, Proc. IEEE Conf. Comput. Vis. Pattern Recognit. (CVPR), 2025, (CCF-A).</p>
-    <p>2 - Scale Effects in Mangrove Mapping from Ultra-high-resolution Remote Sensing Imagery, Hanwen Zhang, Shan Wei, Xindan Liang, <strong>Yiping Chen</strong>, Hongsheng Zhang, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
-    <p>3 - Image-point Cloud Embedding Network for Simultaneous Image-based Farmland Instance Extraction and Point Cloud-based Semantic Segmentation, Jinpeng Li, Yuan Li, Shuhang Zhang, <strong>Yiping Chen</strong>, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
-    <p>4 - CSFNet: Cross-modal Semantic Focus Network for Sematic Segmentation of Large-Scale Point Clouds, Yang Luo, Ting Han, Yujun Liu, Jinhe Su, <strong>Yiping Chen</strong>, Jinyuan Li, Yundong Wu*, Guorong Cai*, IEEE Transactions on Geoscience and Remote Sensing, 2025, (JCR Q1, IF=8.2, CCF-B).</p>
-    <p>5 - HSPFormer: Hierarchical Spatial Perception Transformer for Semantic Segmentation, Siyu Chen, Ting Han, Changshe Zhang, Jinhe Su, Ruisheng Wang, <strong>Yiping Chen</strong>, Zongyue Wang, Guorong Cai*, IEEE Transactions on Intelligent Transportation Systems, 2025, (JCR Q1, IF=7.9, CCF-B).</p>
+    <p>1  Scene4U: Hierarchical Layered 3D Scene Reconstruction from Single Panoramic Image for Your Immerse Exploration, Zilong Huang, Jun He, Junyan Ye, Lihan Jiang, Weijia Li, <strong>Yiping Chen*</strong>, Ting Han*, Proc. IEEE Conf. Comput. Vis. Pattern Recognit. (CVPR), 2025, (CCF-A).</p>
+    <p>2  Scale Effects in Mangrove Mapping from Ultra-high-resolution Remote Sensing Imagery, Hanwen Zhang, Shan Wei, Xindan Liang, <strong>Yiping Chen</strong>, Hongsheng Zhang, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
+    <p>3  Image-point Cloud Embedding Network for Simultaneous Image-based Farmland Instance Extraction and Point Cloud-based Semantic Segmentation, Jinpeng Li, Yuan Li, Shuhang Zhang, <strong>Yiping Chen</strong>, International Journal of Applied Earth Observation and Geoinformation, 2025, (JCR Q1, IF=7.6).</p>
+    <p>4  CSFNet: Cross-modal Semantic Focus Network for Sematic Segmentation of Large-Scale Point Clouds, Yang Luo, Ting Han, Yujun Liu, Jinhe Su, <strong>Yiping Chen</strong>, Jinyuan Li, Yundong Wu*, Guorong Cai*, IEEE Transactions on Geoscience and Remote Sensing, 2025, (JCR Q1, IF=8.2, CCF-B).</p>
+    <p>5  HSPFormer: Hierarchical Spatial Perception Transformer for Semantic Segmentation, Siyu Chen, Ting Han, Changshe Zhang, Jinhe Su, Ruisheng Wang, <strong>Yiping Chen</strong>, Zongyue Wang, Guorong Cai*, IEEE Transactions on Intelligent Transportation Systems, 2025, (JCR Q1, IF=7.9, CCF-B).</p>
 
       <h3 class="year-title">Publications — 2024</h3>
     <div style="height:600px; overflow-y: auto; padding: 20px; border: 1px solid #ccc; border-radius: 10px; background-color: #fafafa;">
