--- a/Publications.html
+++ b/Publications.html
@@ -26,6 +26,7 @@ header-img: "img/Book.jpg"
 </header>
 
 <!-- Chinese Version -->
+<div class="container">
 <div class="zh post-container">
 
     <!--copied from markdown -->
